--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script src="{{ url_for('static', filename='script.js') }}" defer></script>
     <title>NU Pharmacy</title>
+    <link rel="icon" href="{{ url_for('static', filename='logo-1.png') }}" type="image/png">
 </head>
 <body>
     <header>
@@ -22,17 +22,10 @@
         </div>
         
         <div class="cart-section">
-            <button id="cart-button">Cart (0)</button>
-            <div id="cart-dropdown" style="display: none;">
-                <ul id="cart-items"></ul>
-                <!-- Display Total Sum -->
-                <p id="total-sum" style="font-weight: bold;">Total: 0 EGP</p>
-                <button id="checkout-button">Checkout</button>
-            </div>
-            
+            <a href="{{ url_for('cart') }}">
+                <button id="cart-button">Cart ({{ session.get('cart', []) | length }})</button>
+            </a>
         </div>
-        
-        
     </header>
 
     <main>
@@ -44,14 +37,15 @@
                         <p>Price: {{ medicine.price }} EGP</p>
                         <p>Form: {{ medicine.form }}</p>
                         <p>Category: {{ medicine.category }}</p>
-                        <button class="add-to-cart">Add to Cart</button>
+                        <a href="{{ url_for('add_to_cart_route', id=medicine.id) }}">
+                            <button class="add-to-cart">Add to Cart</button>
+                        </a>
                     </div>
                 {% endfor %}
             {% else %}
                 <p>No medicines found.</p>
             {% endif %}
         </section>
-                
     </main>
 
     <footer>
