--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,7 @@ header h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 header form {
@@ -65,12 +66,41 @@ header button:hover {
 }
 
 
+.filter {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 20px;
+    padding: 10px;
+    width: 100%;
+    max-width: 600px;
+    
+}
+
+.filter select {
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #90caf9;
+    background-color: white;
+    width: 100%;
+    max-width: 180px;
+}
+
+.filter select:hover {
+    background-color: #f1f1f1;
+}
+
+.filter select:focus {
+    outline-color: #1565c0;
+}
+
+
 .cart-section {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-
 
 .cart-section button {
     padding: 10px 20px;
@@ -134,6 +164,7 @@ main {
         grid-template-columns: 1fr;
     }
 }
+
 
 .medicine-item {
     background: white;
