--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -16,7 +16,7 @@
     <main>
         <section class="checkout-section">
             <p>Your order has been placed successfully. Your cart is now empty.</p>
-            <a href="{{ url_for('home') }}">
+            <a href="{{ url_for('dashboard') }}">
                 <button class="return-home-btn"><i class="fas fa-home"></i> Return to Home</button>
             </a>
         </section>
