--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Cart</title>
 </head>
 <body>
@@ -14,22 +13,30 @@
     </header>
 
     <main>
+        <section claas="home-page">
+            <div class="home-page-button">
+        
+                <a href="{{ url_for('home') }}">
+                    <button>Home Page</button>
+                </a>
+            </div>
+        </section>
         <section class="cart-section">
-            {% if cart_items %}
+            {% if cartitems %}
                 <ul id="cart-items">
-                    {% for item in cart_items %}
-                        <li class="cart-item">
+                    {% for item in cartitems %}
+                        <li class="cartitems">
                             <span>{{ item['drugname'] }} - {{ item['price'] }} EGP</span>
                             <a href="{{ url_for('remove_from_cart_route', index=loop.index0) }}">
-                                <button class="remove-item"><i class="fas fa-trash"></i> Remove</button> <!-- Trash Icon -->
+                                <button class="remove-item">Remove</button>
                             </a>
                         </li>
                     {% endfor %}
                 </ul>
-                <p class="total-sum">Total: {{ total_sum }} EGP</p>
+                <p class="total-cost"> Total: {{ total_cost }}  EGP</p>
                 <div class="checkout-button">
                     <a href="{{ url_for('checkout') }}">
-                        <button><i class="fas fa-check-circle"></i> Checkout</button> <!-- Checkout Icon -->
+                        <button>Checkout</button>
                     </a>
                 </div>
             {% else %}
